--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,13 +6,18 @@
 .contacto{
     font-family: 'Heebo', sans-serif !important;
     margin: 10px;
+
+    p{
+        font-size: 19px;
+        margin-bottom: 8px;
+    }
 }
 .redes_sociales{
     margin: 10px;
 }
 footer i{
     font-size: 20px;
-    margin-left: 33px;
+    margin-left: 38px;
 }
 
 /*pages inicio*/
