--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -31,13 +31,12 @@ footer{
             margin-bottom: 10px;
         }
 
-        h4{
-            font-size: 23px !important;
+        h2{
+            font-size: 25px !important;
         }
 
-        h5{
-            font-size: 18px !important;
-            margin-top: 12px;
+        p{
+            text-align: left;
         }
     }
 }
