--- a/scss/pages/_clientes.scss
+++ b/scss/pages/_clientes.scss
@@ -1,3 +1,9 @@
+p{
+    text-align: center;
+    font-size: 35px;
+    color: white;
+    margin-top: 8px;
+}
 .clients{
     font-family: 'Heebo', sans-serif;
     display: grid;
