--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -15,15 +15,17 @@
     }
 
     .img1{
-        background-image: url(../multimedia/planta.jpg);
+        background-image: url(/multimedia/planta\ \(1\).jpg);
+        background-position: -750px;
     }
     .img2{
         background-image: url(../multimedia/descarga2.jpg);
     }
     .img3{
-        background-image: url(../multimedia/movimiento\ de\ suelo.jpg);
+        background-image: url(/multimedia/movimiento\ de\ suelo\ \(1\).jpg);
+        background-position: -105px;
     }
     .img4{
-        background-image: url(../multimedia/planta4.png)
+        background-image: url(/multimedia/planta4.jpg)
     }
 }
