--- a/scss/view/_mediaquerie.scss
+++ b/scss/view/_mediaquerie.scss
@@ -1,3 +1,6 @@
+$color1: rgb(2, 57, 128);
+$color2: rgba(0, 0, 0, 0.774);
+
 @media only screen and (max-width:1440px) and (min-width:768px){
     .about{
         content-visibility: hidden;
@@ -78,10 +81,12 @@
 
         h1{
             font-size: 30px;
-        }
-        h2{
+            background-color: $color2;
             color: white;
-            background-color: rgba(0, 0, 0, 0.774);
+        }
+
+        .img1{
+            background-position: center;
         }
 
         .img3{
@@ -144,6 +149,10 @@
 }
 
 @media only screen and (max-width: 688px){
+    h1{
+        background-color: $color2;
+        color: white;
+    }
     .contacto{
         content-visibility: hidden;
     }
@@ -155,8 +164,13 @@
         grid-template-columns: repeat(2, 2fr);
         grid-template-rows: repeat(2, 500px);
 
-        h2{
-            background-color: rgba(0, 0, 0, 0.774);
+        .img3{
+            background-position: center;
+        }
+
+        h1{
+            font-size: 27px;
+            background-color: $color2;
             color: white;
         }
     }
@@ -173,15 +187,25 @@
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(1, 200px);
 
+        .img1{
+            background-position: center;
+        }
+
         .img3{
             background-image: url(../multimedia/obra.jpg);
         }
+    }
+    .navegacion{
+        content-visibility: hidden;
+    }
+    .redes_sociales{
+        margin-top: 40px;
     }
 }
 
 @media only screen and (max-width: 575px) and (min-width: 320px){
     .navbar-collapse{
-        background-color: rgb(2, 57, 128);
+        background-color: $color1;
         z-index: 2;
     }
 }
@@ -236,16 +260,9 @@
 }
 
 @media only screen and (max-width: 496px){
-    .navegacion{
-        content-visibility: hidden;
-    }
     .redes_sociales{
         margin-top: 45px;
         margin-right: 20px;
-    }
-    h2{
-        font-size: 20px;
-        background-color: rgba(0, 0, 0, 0.774);
     }
 }
 
@@ -253,6 +270,12 @@
     .about{
         background-position: left;
         height: 570px;
+    }
+}
+
+@media only screen and (max-width: 464px){
+    .redes_sociales{
+        margin: auto;
     }
 }
 
@@ -291,17 +314,20 @@
     .vw_truck{
         height: 750px;
     }
+    .redes_sociales{
+        margin: 45px 120px 40px 5px;
+    }
 }
 
 @media only screen and (max-width: 406px){
     .redes_sociales{
-        margin: 45px 130px 40px 5px;
+        margin: 45px 110px 40px 5px;
     }
 }
 
 @media only screen and (max-width: 396px){
     .redes_sociales{
-        margin-right: 120px;
+        margin-right: 100px;
         margin-top: 40px;
     }
 }
@@ -314,7 +340,7 @@
 
 @media only screen and (max-width: 386px){
     .redes_sociales{
-        margin-right: 110px;
+        margin-right: 95px;
         margin-top: 40px;
     }
 }
@@ -331,6 +357,9 @@
     .vw_truck{
         height: 850px;
         background-position: center;
+    }
+    p{
+        font-size: 27px;
     }
 }
 
