--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -4,7 +4,7 @@
 }
 .about{
     border: 2px solid black;
-    background-image: url(multimedia/planta5.jpg);
+    background-image: url(/multimedia/planta5.jpg);
     background-repeat: no-repeat;
     height: 500px;
 }
