--- a/scss/pages/_servicios.scss
+++ b/scss/pages/_servicios.scss
@@ -44,6 +44,9 @@ section{
 .card_desc{
     color: white;
     margin-top: 5px;
+    font-size: 17px;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 .card a{
     color: white;
