--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -15,14 +15,14 @@
     }
 
     .img1{
-        background-image: url(/multimedia/planta\ \(1\).jpg);
+        background-image: url(/multimedia/planta.jpg);
         background-position: -750px;
     }
     .img2{
         background-image: url(../multimedia/descarga2.jpg);
     }
     .img3{
-        background-image: url(/multimedia/movimiento\ de\ suelo\ \(1\).jpg);
+        background-image: url(/multimedia/movimiento\ de\ suelo.jpg);
         background-position: -105px;
     }
     .img4{
