--- a/scss/style.css
+++ b/scss/style.css
@@ -39,14 +39,14 @@ footer i {
   font-size: 20px;
 }
 .home .img1 {
-  background-image: url(/multimedia/planta\ \(1\).jpg);
+  background-image: url(/multimedia/planta.jpg);
   background-position: -750px;
 }
 .home .img2 {
   background-image: url(../multimedia/descarga2.jpg);
 }
 .home .img3 {
-  background-image: url(/multimedia/movimiento\ de\ suelo\ \(1\).jpg);
+  background-image: url(/multimedia/movimiento\ de\ suelo.jpg);
   background-position: -105px;
 }
 .home .img4 {
@@ -120,14 +120,9 @@ section {
   background-color: #333;
 }
 
-.card_title:hover {
-  color: white;
-}
-
 .card_desc {
   color: white;
-  margin-top: 5px;
-  font-size: 17px;
+  font-size: 16px;
   padding-left: 4px;
   padding-right: 4px;
 }
