--- a/scss/style.css
+++ b/scss/style.css
@@ -39,18 +39,18 @@ footer i {
   font-size: 20px;
 }
 .home .img1 {
-  background-image: url(/multimedia/planta.jpg);
+  background-image: url(../multimedia/planta.jpg);
   background-position: -400px;
 }
 .home .img2 {
   background-image: url(../multimedia/descarga2.jpg);
 }
 .home .img3 {
-  background-image: url(/multimedia/movimiento\ de\ suelo.jpg);
+  background-image: url(../multimedia/movimiento\ de\ suelo.jpg);
   background-position: -105px;
 }
 .home .img4 {
-  background-image: url(/multimedia/planta4.jpg);
+  background-image: url(../multimedia/planta4.jpg);
 }
 
 .carousel-caption {
