--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap');
-/* font-family: 'Heebo', sans-serif; */
+.home{
+    font-family: 'Heebo', sans-serif;
+    display: grid;
+    width: 100%;
+    height: 1000px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+
+    .foto{
+        border: 1px solid #000;
+        background-position: center;
+        background-size: cover;
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .img1{
+        background-image: url(../multimedia/planta.jpg);
+        background-position: -400px;
+    }
+    .img2{
+        background-image: url(../multimedia/descarga2.jpg);
+    }
+    .img3{
+        background-image: url(../multimedia/movimiento\ de\ suelo.jpg);
+        background-position: -105px;
+    }
+    .img4{
+        background-image: url(../multimedia/planta4.jpg)
+    }
+}
+.carousel-caption{
+    background-color: rgba(0, 0, 0, 0.829);
+    font-size: 25px;
+}
+.about{
+    border: 2px solid black;
+    background-image: url(../multimedia/planta5.jpg);
+    background-repeat: no-repeat;
+    height: 500px;
+}
+.us{
+    font-size: 20px;
+    padding: 10px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.829)
+}
 .navegacion{
     margin: 10px;
 }
@@ -21,8 +67,6 @@ footer i{
 }
 
 /*pages inicio*/
-@import "./pages/home";
-@import "./pages/nosotros";
 @import "./pages/servicios";
 @import "./pages/clientes";
 @import "./pages/contacto";
