--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,7 @@
 
     .img1{
         background-image: url(../multimedia/planta.jpg);
-        background-position: -400px;
+        background-position: -650px;
     }
     .img2{
         background-image: url(../multimedia/descarga2.jpg);
@@ -27,7 +27,7 @@
         background-position: -105px;
     }
     .img4{
-        background-image: url(../multimedia/planta4.jpg)
+        background-image: url(../multimedia/planta4.png)
     }
 }
 .carousel-caption{
